New version using paintEvent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(Maze2 VERSION 0.1 LANGUAGES CXX)
+project(Labitint_scene VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -16,40 +16,41 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 set(PROJECT_SOURCES
         main.cpp
-        mainwindow.cpp
-        mainwindow.h
-        mainwindow.ui
+        labirint.cpp
+        labirint.h
 
-        maze.h
-        mazedef.cpp
+        engine.h
+        enginedef.cpp
+        anima.h
+        anima.cpp
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(Maze2
+    qt_add_executable(Labitint_scene
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET Maze2 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET Labitint_scene APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(Maze2 SHARED
+        add_library(Labitint_scene SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(Maze2
+        add_executable(Labitint_scene
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(Maze2 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(Labitint_scene PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-set_target_properties(Maze2 PROPERTIES
+set_target_properties(Labitint_scene PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -57,10 +58,10 @@ set_target_properties(Maze2 PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS Maze2
+install(TARGETS Labitint_scene
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(Maze2)
+    qt_finalize_executable(Labitint_scene)
 endif()
